salt/net/files/master.iptables.v4
# Generated by iptables-save v1.4.21 on Mon May  4 21:42:35 2015
*mangle
:PREROUTING ACCEPT [21677:1756892]
:INPUT ACCEPT [21677:1756892]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [23369:2555756]
:POSTROUTING ACCEPT [23369:2555756]
COMMIT
# Completed on Mon May  4 21:42:35 2015
# Generated by iptables-save v1.4.21 on Mon May  4 21:42:35 2015
*nat
:PREROUTING ACCEPT [1410:86118]
:INPUT ACCEPT [18:1594]
:OUTPUT ACCEPT [180:13032]
:POSTROUTING ACCEPT [122:7320]
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Mon May  4 21:42:35 2015
# Generated by iptables-save v1.4.21 on Mon May  4 21:42:35 2015
*filter
:INPUT DROP [302:18353]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:fail2ban-ssh - [0:0]
-A INPUT -i tun0 -j ACCEPT
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -i eth1 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT
-A FORWARD -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A fail2ban-ssh -s 93.158.200.40/32 -j REJECT --reject-with icmp-port-unreachable
-A fail2ban-ssh -j RETURN
COMMIT
# Completed on Mon May  4 21:42:35 2015
